--- a/diario.html
+++ b/diario.html
@@ -54,8 +54,8 @@
       <div class="footer-section">
         <h3>Informações</h3>
         <p>Endereço</p>
-        <p>Telefone</p>
-        <p>Email</p>
+        <p>&#9742;: +55 (41) 9 9666-9588</p>
+        <p>&#x1F4E7;: contato@keytogo.com.br</p>
       </div>
       <div class="footer-section">
         <h3>Links úteis</h3>
